[package]
name = "covid-19"
version = "0.1.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
serde = { version = "1.0", features = [ "derive" ] }
csv = "1.1.3"
tokio = { version = "0.2", features = [ "full" ] }
structopt = "0.3.11"
